[package]
name = "binary-ff1"
version = "0.1.0"
authors = ["Saleem Rashid <dev@saleemrashid.com>"]
edition = "2018"
description = "Optimized Rust implementation of FF1 encryption with radix 2"
readme = "README.md"
repository = "https://github.com/saleemrashid/binary-ff1"
license = "MIT OR Apache-2.0"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.3"

[dev-dependencies]
aes = "0.7"
fpe = "0.5"
lazy_static = "1.4"
num = "0.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
